# zinal

./: Cargo.toml  LICENSE  README.md  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
.helix/: languages.toml
documentation/: Syntax.md
examples/context/: Cargo.toml
examples/context/src/: main.rs
examples/hello-file/: Cargo.toml
examples/hello-file/src/: main.rs
examples/hello-file/templates/: person.html
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
parser_common/: Cargo.toml
parser_common/src/: generators.rs  input.rs  lib.rs  parsers.rs
parser_common/src/combinators/: boxed.rs  filter.rs  map.rs  mod.rs  optional.rs  repeated.rs  select.rs  then.rs
parser_common/src/generators/: func.rs  take_until.rs  whitespace.rs
stardust/: Cargo.toml
stardust/src/: axum.rs  builder.rs  children.rs  content_type.rs  context.rs  derive.rs  lib.rs  renderable.rs  template.rs  test.rs  tests.rs
stardust/src/content_type/: html.rs  plain.rs
stardust_core/: Cargo.toml
stardust_core/src/: content_types.rs  context.rs  lib.rs  renderables.rs
stardust_core/src/content_types/: html.rs  plain.rs
stardust_derive/: Cargo.toml
stardust_derive/src/: derive.rs  emit.rs  generics.rs  lib.rs  opts.rs
stardust_derive/src/derive/: builder.rs  fields.rs  properties.rs  values.rs
stardust_derive/src/parser/: combinators.rs  common.rs  error.rs  html.rs  input.rs  mod.rs
stardust_derive/src/parser/combinators/: filter.rs  map.rs  optional.rs  then.rs
stardust_derive/src/parser/common/: select.rs  values.rs
stardust_derive/src/parser/html/: tests.rs
zinal/: Cargo.toml
zinal/src/: builder.rs  children.rs  context.rs  derive.rs  escaper.rs  html.rs  lib.rs  renderable.rs  template.rs  tests.rs
zinal/tests/: components.rs  context_params.rs
zinal/tests/errors/: error_in_expression.rs  error_in_expression.stderr  incorrect_prop_type.rs  incorrect_prop_type.stderr
zinal_derive/: Cargo.toml
zinal_derive/src/: derive.rs  emit.rs  lib.rs  opts.rs
zinal_derive/src/derive/: builder.rs  fields.rs  properties.rs  values.rs
zinal_derive/src/parser/: html.rs  mod.rs
zinal_derive/src/parser/common/: mod.rs
zinal_derive/src/parser/html/: tests.rs
