[package]
name = "stardust"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
stardust_core = { path = "../stardust_core", version = "0.1.0" }
stardust_derive = { path = "../stardust_derive", version = "0.1.0", optional = true }

[features]
default = ["derive"]
derive = ["dep:stardust_derive"]
