[package]
name = "stardust"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
stardust_derive = { path = "../stardust_derive", version = "0.1.0", optional = true }
axum-core = { version = "0.4", optional = true }


[features]
default = ["derive"]
derive = ["dep:stardust_derive"]
axum = ["dep:axum-core"]
