[package]
name = "stardust_derive"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
parser_common = { path = "../parser_common", version = "0.1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true
