[package]
name = "zinal"
version = "0.2.1"
authors = ["Markus Gasser <markus.gasser@mailbox.org>"]
edition = "2021"
description = "HTML templating library for Rust programs"
repository = "https://github.com/frenetisch-applaudierend/zinal"
license = "MIT"
keywords = ["html", "template", "components"]
categories = ["template-engine", "web-programming"]
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[dependencies]
zinal_derive = { path = "../zinal_derive", version = "0.2.1", optional = true }

[dev-dependencies]
axum = "0.7"
trybuild = "1.0"

[features]
default = ["derive"]

# Enable deriving the Template trait
derive = ["dep:zinal_derive"]

# Generate axum IntoResponse impls for derived templates
axum = ["zinal_derive?/axum"]
