[package]
name = "zinal_derive"
version = "0.2.0"
authors = ["Markus Gasser <markus.gasser@mailbox.org>"]
edition = "2021"
description = "Derive macro for zinal, a HTML templating library for Rust programs"
repository = "https://github.com/frenetisch-applaudierend/zinal"
license = "MIT"
keywords = ["html", "template", "components"]
categories = ["template-engine", "web-programming"]
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
unicode-xid = "0.2"

[lib]
proc-macro = true

[features]

# Generate axum IntoResponse impls for derived templates
axum = []
